# masterify

./: .gitignore  app.py  extensions.py  models.py  pyproject.toml  requirements.txt  run.py  set_admin.py  setup_references.py
audio_processing/: __init__.py  matchering_processor.py  presets.py  processor.py
instance/: masterify.db
migrations/versions/: dc21d8ef4eb9_add_plan_and_plan_renewal_columns_to_.py
routes/: api.py  auth.py  stripe_routes.py  views.py
static/css/: background-effects.css  custom.css  styles.css  tailwind.css
static/js/: audio-processor.js  main.js  waveform.js
templates/: 404.html  500.html  account.html  auth.html  base.html  contact.html  dashboard.html  email_login.html  index.html  payment_cancel.html  payment_success.html  pricing.html  social_login.html  upload.html
utils/: file_management.py
